--- a/.github/workflows/approval_handler.yml
+++ b/.github/workflows/approval_handler.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Process /approve
         uses: actions/github-script@v7
         with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+          github-token: ${{ secrets.WORKFLOW_PAT }}
           script: |
             const { owner, repo } = context.repo;
             const number = context.payload.issue.number;
