--- a/.github/workflows/version_update.yml
+++ b/.github/workflows/version_update.yml
@@ -20,18 +20,8 @@ jobs:
       github.event.pull_request.merged == true &&
       github.event.pull_request.base.ref == 'main'
     outputs:
+      changed: ${{ steps.detect.outputs.changed }}
       bump: ${{ steps.bump.outputs.bump }}
-      changed_frontend: ${{ steps.changed.outputs.frontend }}
-      changed_backend: ${{ steps.changed.outputs.backend }}
-      changed_functions: ${{ steps.changed.outputs.functions }}
-      changed_infra: ${{ steps.changed.outputs.infra }}
-      global_tag: ${{ steps.tags.outputs.global_tag }}
-      front_tag: ${{ steps.tags.outputs.front_tag }}
-      back_tag: ${{ steps.tags.outputs.back_tag }}
-      funcs_tag: ${{ steps.tags.outputs.funcs_tag }}
-      infra_tag: ${{ steps.tags.outputs.infra_tag }}
-      major: ${{ steps.bump.outputs.major }}
-
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -39,31 +29,28 @@ jobs:
           fetch-depth: 0
 
       - name: Detect changed components
-        id: changed
+        id: detect
+        shell: bash
         run: |
           set -euo pipefail
-          git fetch origin main --depth=1
+
           BASE_SHA="${{ github.event.pull_request.base.sha }}"
-          HEAD_SHA="${{ github.event.pull_request.merge_commit_sha }}"
-          files="$(git diff --name-only "$BASE_SHA" "$HEAD_SHA")"
+          HEAD_SHA="${{ github.event.pull_request.merge_commit_sha || github.event.pull_request.head.sha }}"
 
-          frontend=false
-          backend=false
-          functions=false
-          infra=false
+          git diff --name-only "${BASE_SHA}" "${HEAD_SHA}" > changed.txt || true
+          
+          FRONT=$(grep -E '^frontend-code/'  changed.txt || true)
+          BACK=$(grep -E '^flask-api/'       changed.txt || true)
+          FUNCS=$(grep -E '^gcp-functions/'  changed.txt || true)
+          INFRA=$(grep -E '^(nginx/|docker-compose|infra/)' changed.txt || true)
 
-          while IFS= read -r f; do
-            [[ -z "$f" ]] && continue
-            if [[ "$f" == frontend-code/* ]]; then frontend=true; fi
-            if [[ "$f" == flask-api/* ]]; then backend=true; fi
-            if [[ "$f" == gcp-functions/* ]]; then functions=true; fi
-            if [[ "$f" == infra/* || "$f" == docker-compose.yml || "$f" == Dockerfile* || "$f" == .github/* ]]; then infra=true; fi
-          done <<< "$files"
+          OUT=""
+          [[ -n "${FRONT:-}"  ]] && OUT+="${OUT:+,}fend"
+          [[ -n "${BACK:-}"   ]] && OUT+="${OUT:+,}bend"
+          [[ -n "${FUNCS:-}"  ]] && OUT+="${OUT:+,}func"
+          [[ -n "${INFRA:-}"  ]] && OUT+="${OUT:+,}infra"
 
-          echo "frontend=$frontend" >> "$GITHUB_OUTPUT"
-          echo "backend=$backend" >> "$GITHUB_OUTPUT"
-          echo "functions=$functions" >> "$GITHUB_OUTPUT"
-          echo "infra=$infra" >> "$GITHUB_OUTPUT"
+          echo "changed=${OUT}" >> "$GITHUB_OUTPUT"
 
       - name: Determine SemVer bump from labels
         id: bump
@@ -71,138 +58,145 @@ jobs:
         with:
           script: |
             const labels = (context.payload.pull_request.labels || []).map(l => l.name);
-            let bump = "patch";
-            if (labels.includes("breaking-change")) bump = "major";
-            else if (labels.includes("feature")) bump = "minor";
-            core.setOutput("bump", bump);
-            core.setOutput("major", bump === "major" ? "true" : "false");
+            let bump = 'patch';
+            if (labels.includes('breaking-change')) bump = 'major';
+            else if (labels.includes('feature')) bump = 'minor';
+            core.setOutput('bump', bump);
 
-      - name: Compute next tags
-        id: tags
-        run: |
-          set -euo pipefail
-
-          bump="${{ steps.bump.outputs.bump }}"
-
-          get_latest() {
-            local pattern="$1"
-            local latest
-            latest="$(git tag -l "$pattern" --sort=-v:refname | head -n 1 || true)"
-            echo "$latest"
-          }
-
-          inc() {
-            local v="$1"
-            local bump="$2"
-            v="${v#v}"
-            IFS='.' read -r maj min pat <<< "$v"
-            maj="${maj:-0}"
-            min="${min:-0}"
-            pat="${pat:-0}"
-            if [[ "$bump" == "major" ]]; then
-              maj=$((maj+1)); min=0; pat=0
-            elif [[ "$bump" == "minor" ]]; then
-              min=$((min+1)); pat=0
-            else
-              pat=$((pat+1))
-            fi
-            echo "v${maj}.${min}.${pat}"
-          }
-
-          latest_global="$(get_latest "v*.*.*")"
-          [[ -z "$latest_global" ]] && latest_global="v0.0.0"
-          next_global="$(inc "$latest_global" "$bump")"
-
-          latest_front="$(get_latest "frontend-v*.*.*")"
-          [[ -z "$latest_front" ]] && latest_front="frontend-v0.0.0"
-          next_front="frontend-${next_global}"
-
-          latest_back="$(get_latest "backend-v*.*.*")"
-          [[ -z "$latest_back" ]] && latest_back="backend-v0.0.0"
-          next_back="backend-${next_global}"
-
-          latest_funcs="$(get_latest "functions-v*.*.*")"
-          [[ -z "$latest_funcs" ]] && latest_funcs="functions-v0.0.0"
-          next_funcs="functions-${next_global}"
-
-          latest_infra="$(get_latest "infra-v*.*.*")"
-          [[ -z "$latest_infra" ]] && latest_infra="infra-v0.0.0"
-          next_infra="infra-${next_global}"
-
-          echo "global_tag=$next_global" >> "$GITHUB_OUTPUT"
-          echo "front_tag=$next_front" >> "$GITHUB_OUTPUT"
-          echo "back_tag=$next_back" >> "$GITHUB_OUTPUT"
-          echo "funcs_tag=$next_funcs" >> "$GITHUB_OUTPUT"
-          echo "infra_tag=$next_infra" >> "$GITHUB_OUTPUT"
-
-  create_tags:
-    name: Create tags
-    needs: prepare_meta
+  compute_versions:
+    name: Compute next version per component
     runs-on: ubuntu-latest
-    if: needs.prepare_meta.outputs.bump != ''
+    needs: prepare_meta
+    if: needs.prepare_meta.outputs.changed != ''
+    outputs:
+      frontend_next: ${{ steps.calc.outputs.frontend_next }}
+      backend_next: ${{ steps.calc.outputs.backend_next }}
+      functions_next: ${{ steps.calc.outputs.functions_next }}
+      infra_next: ${{ steps.calc.outputs.infra_next }}
+      global_next: ${{ steps.calc.outputs.global_next }}
+    env:
+      BUMP_LEVEL: ${{ needs.prepare_meta.outputs.bump }}
+      CHANGED: ${{ needs.prepare_meta.outputs.changed }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-
-      - name: Create tags
-        env:
-          GLOBAL_TAG: ${{ needs.prepare_meta.outputs.global_tag }}
-          FRONT_TAG: ${{ needs.prepare_meta.outputs.front_tag }}
-          BACK_TAG: ${{ needs.prepare_meta.outputs.back_tag }}
-          FUNCS_TAG: ${{ needs.prepare_meta.outputs.funcs_tag }}
-          INFRA_TAG: ${{ needs.prepare_meta.outputs.infra_tag }}
-          CHANGED_FRONTEND: ${{ needs.prepare_meta.outputs.changed_frontend }}
-          CHANGED_BACKEND: ${{ needs.prepare_meta.outputs.changed_backend }}
-          CHANGED_FUNCTIONS: ${{ needs.prepare_meta.outputs.changed_functions }}
-          CHANGED_INFRA: ${{ needs.prepare_meta.outputs.changed_infra }}
+      - name: Fetch tags
+        run: git fetch --tags --force
+      - name: Compute next versions
+        id: calc
+        shell: bash
         run: |
           set -euo pipefail
-          git config user.name "github-actions"
-          git config user.email "github-actions@github.com"
+          BUMP="${BUMP_LEVEL}"
+          CHANGED="${CHANGED}"
 
-          git tag -a "$GLOBAL_TAG" -m "$GLOBAL_TAG"
+          bump_one() {
+            local prefix="$1"
+            local pattern="${prefix}-v*"
+            local last
+            last=$(git tag --list "$pattern" | sort -V | tail -n 1 || true)
+            local base="0.0.0"
+            [[ -n "$last" ]] && base="${last#${prefix}-v}"
+            
+            IFS='.' read -r major minor patch <<< "$base"
+            case "$BUMP" in
+              major) major=$((major + 1)); minor=0; patch=0 ;;
+              minor) minor=$((minor + 1)); patch=0 ;;
+              patch|*) patch=$((patch + 1)) ;;
+            esac
+            echo "${prefix}-v${major}.${minor}.${patch}"
+          }
 
-          if [[ "$CHANGED_FRONTEND" == "true" ]]; then
-            git tag -a "$FRONT_TAG" -m "$FRONT_TAG"
-          fi
-          if [[ "$CHANGED_BACKEND" == "true" ]]; then
-            git tag -a "$BACK_TAG" -m "$BACK_TAG"
-          fi
-          if [[ "$CHANGED_FUNCTIONS" == "true" ]]; then
-            git tag -a "$FUNCS_TAG" -m "$FUNCS_TAG"
-          fi
-          if [[ "$CHANGED_INFRA" == "true" ]]; then
-            git tag -a "$INFRA_TAG" -m "$INFRA_TAG"
-          fi
+          bump_global() {
+            local last
+            last=$(git tag --list "v[0-9]*" | sort -V | tail -n 1 || true)
+            local base="0.0.0"
+            [[ -n "$last" ]] && base="${last#v}"
 
-          git push origin --tags
+            IFS='.' read -r major minor patch <<< "$base"
+            case "$BUMP" in
+              major) major=$((major + 1)); minor=0; patch=0 ;;
+              minor) minor=$((minor + 1)); patch=0 ;;
+              patch|*) patch=$((patch + 1)) ;;
+            esac
+            echo "v${major}.${minor}.${patch}"
+          }
+
+          GLOBAL_NEXT="$(bump_global)"
+          FRONT_NEXT=""
+          BACK_NEXT=""
+          FUNCS_NEXT=""
+          INFRA_NEXT=""
+
+          [[ ",$CHANGED," == *",fend,"* ]] && FRONT_NEXT="$(bump_one "frontend")"
+          [[ ",$CHANGED," == *",bend,"* ]] && BACK_NEXT="$(bump_one "backend")"
+          [[ ",$CHANGED," == *",func,"* ]] && FUNCS_NEXT="$(bump_one "functions")"
+          [[ ",$CHANGED," == *",infra,"* ]] && INFRA_NEXT="$(bump_one "infra")"
+
+          echo "frontend_next=$FRONT_NEXT"  >> "$GITHUB_OUTPUT"
+          echo "backend_next=$BACK_NEXT"    >> "$GITHUB_OUTPUT"
+          echo "functions_next=$FUNCS_NEXT" >> "$GITHUB_OUTPUT"
+          echo "infra_next=$INFRA_NEXT"     >> "$GITHUB_OUTPUT"
+          echo "global_next=$GLOBAL_NEXT"   >> "$GITHUB_OUTPUT"
+
+  create_and_push_tags:
+    name: Create and push tags
+    runs-on: ubuntu-latest
+    needs: compute_versions
+    if: needs.compute_versions.outputs.global_next != ''
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Configure git
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions@users.noreply.github.com"
+      - name: Create and push tags
+        shell: bash
+        run: |
+          set -euo pipefail
+          F_TAG="${{ needs.compute_versions.outputs.frontend_next }}"
+          B_TAG="${{ needs.compute_versions.outputs.backend_next }}"
+          FN_TAG="${{ needs.compute_versions.outputs.functions_next }}"
+          INF_TAG="${{ needs.compute_versions.outputs.infra_next }}"
+          G_TAG="${{ needs.compute_versions.outputs.global_next }}"
+
+          [[ -n "$G_TAG" ]] && git tag -a "$G_TAG" -m "Global release"
+          [[ -n "$F_TAG" ]] && git tag -a "$F_TAG" -m "Frontend release"
+          [[ -n "$B_TAG" ]] && git tag -a "$B_TAG" -m "Backend release"
+          [[ -n "$FN_TAG" ]] && git tag -a "$FN_TAG" -m "Functions release"
+          [[ -n "$INF_TAG" ]] && git tag -a "$INF_TAG" -m "Infra release"
+
+          git push --tags
 
   major_release:
-    name: Create releases (major only)
-    needs: [prepare_meta, create_tags]
+    name: Create Major Release
     runs-on: ubuntu-latest
-    if: needs.prepare_meta.outputs.major == 'true'
+    needs: [prepare_meta, compute_versions, create_and_push_tags]
+    if: needs.prepare_meta.outputs.bump == 'major'
+    permissions:
+      contents: write
     steps:
       - name: Checkout
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
-      - name: Create GitHub Releases (major)
+      - name: Generate Release Notes and Create Release
         env:
-          REPO: ${{ github.repository }}
-          GLOBAL_TAG: ${{ needs.prepare_meta.outputs.global_tag }}
-          FRONT_TAG: ${{ needs.prepare_meta.outputs.front_tag }}
-          BACK_TAG: ${{ needs.prepare_meta.outputs.back_tag }}
-          FUNCS_TAG: ${{ needs.prepare_meta.outputs.funcs_tag }}
-          INFRA_TAG: ${{ needs.prepare_meta.outputs.infra_tag }}
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY_LABEL }}
+          FRONT_TAG: ${{ needs.compute_versions.outputs.frontend_next }}
+          BACK_TAG: ${{ needs.compute_versions.outputs.backend_next }}
+          FUNCS_TAG: ${{ needs.compute_versions.outputs.functions_next }}
+          INFRA_TAG: ${{ needs.compute_versions.outputs.infra_next }}
+          GLOBAL_TAG: ${{ needs.compute_versions.outputs.global_next }}
           PR_NUMBER: ${{ github.event.pull_request.number }}
+          REPO: ${{ github.repository }}
           PR_TITLE: ${{ github.event.pull_request.title }}
           PR_BODY: ${{ github.event.pull_request.body }}
-          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           set -euo pipefail
 
@@ -214,95 +208,115 @@ jobs:
               return
             fi
 
-            git fetch --tags --force
+            echo "Processing release for $component ($tag)..."
 
+            git fetch --tags --force
+            
+            # Previous tag bulma mantığı
             local prev_tag=""
             local pattern
             if [[ "$component" == "global" ]]; then
-              pattern="v*.*.*"
-              prev_tag="$(git tag -l "$pattern" --sort=-v:refname | grep -v "^${tag}$" | head -n 1 || true)"
+               pattern="^v[0-9]"
             else
-              pattern="${component}-v*.*.*"
-              prev_tag="$(git tag -l "$pattern" --sort=-v:refname | grep -v "^${tag}$" | head -n 1 || true)"
+               pattern="^${component}-v"
             fi
+            
+            local release_tags
+            release_tags=$(gh release list --limit 100 --json tagName --jq ".[].tagName" | grep "$pattern" || true)
+            
+            for t in $release_tags; do
+              if [[ "$t" != "$tag" ]]; then
+                prev_tag="$t"
+                break
+              fi
+            done
 
             local diff_output=""
+            
             if [[ -n "$prev_tag" ]]; then
+              echo "Creating diff from previous release: $prev_tag"
               diff_output=$(git diff "$prev_tag" "$tag" | head -c 3000 || true)
             else
+              # WARNING: COLLECTING FULL COMMIT HISTORY
+              echo "No previous release found. Collecting full commit history for initial release."
+              
               local path_filter=""
               case "$component" in
                 "frontend") path_filter="frontend-code/" ;;
                 "backend") path_filter="flask-api/" ;;
                 "functions") path_filter="gcp-functions/" ;;
-                "infra") path_filter="." ;;
+                "infra") path_filter="." ;; # Infra dağınık olduğu için kök dizini baz alabiliriz
                 "global") path_filter="." ;;
+                *) path_filter="." ;;
               esac
-
-              diff_output=$(git log --oneline -- "$path_filter" | head -n 50 || true)
-              diff_output="$(printf "%s\n\n(Initial release; showing recent commits instead of full diff.)" "$diff_output")"
+              
+              local history
+              history=$(git log --pretty=format:"- %s" "$tag" -- "$path_filter" | head -n 50 || true)
+              
+              diff_output="INITIAL RELEASE. Full Commit History:\n$history"
             fi
 
-            local NOTES=""
-            if [[ -z "${OPENAI_API_KEY:-}" ]]; then
+            PROMPT="You are a technical writer. Generate a release note for a major version release of the '$component' component.
+            
+            Context:
+            - Component: $component
+            - Version: $tag
+            - Previous Version: ${prev_tag:-Initial Release}
+            - PR Title: $PR_TITLE
+            - PR Body: $PR_BODY
+            
+            Data for Summary (Code Diff OR Commit History):
+            $diff_output
+            
+            Instructions:
+            Generate the release notes using EXACTLY the following format:
+            
+            Title: Release $tag
+            Summary: Brief explanation of this release (mention if it is the first release).
+            
+            [Only if breaking changes exist]
+            ⚠️ Breaking Changes:
+            - Detail them here.
+            
+            Changes:
+            - List features/fixes based on the provided data.
+            
+            Do not include raw diffs or commit hashes. Ensure the tone is professional."
+
+            PAYLOAD=$(jq -n \
+              --arg model "gpt-4o-mini" \
+              --arg system "You are a helpful assistant that generates release notes." \
+              --arg user "$PROMPT" \
+              '{
+                model: $model,
+                messages: [
+                  {role: "system", content: $system},
+                  {role: "user", content: $user}
+                ],
+                temperature: 0.3
+              }')
+
+            RESPONSE=$(curl -s -X POST https://api.openai.com/v1/chat/completions \
+              -H "Content-Type: application/json" \
+              -H "Authorization: Bearer $OPENAI_API_KEY" \
+              -d "$PAYLOAD")
+
+            if echo "$RESPONSE" | jq -e '.error' > /dev/null; then
+              echo "OpenAI API Error: $(echo $RESPONSE | jq -r '.error.message')"
               NOTES="Major release for $component. See PR #$PR_NUMBER for details."
             else
-              local PROMPT
-              PROMPT=$(
-                cat <<EOF
-You are generating release notes for a major semantic version bump.
-
-Component: $component
-Tag: $tag
-Global Tag: $GLOBAL_TAG
-
-PR #$PR_NUMBER: $PR_TITLE
-
-PR Description:
-${PR_BODY:-"(none)"}
-
-Diff/History:
-$diff_output
-
-Write concise release notes in Markdown with:
-- Summary
-- Breaking changes
-- Migration notes (if applicable)
-- Key changes
-EOF
-              )
-
-              local RESPONSE
-              RESPONSE=$(curl -sS https://api.openai.com/v1/chat/completions \
-                -H "Content-Type: application/json" \
-                -H "Authorization: Bearer $OPENAI_API_KEY" \
-                -d "$(jq -n --arg prompt "$PROMPT" '{
-                  model: "gpt-4o-mini",
-                  temperature: 0.2,
-                  messages: [
-                    {role: "system", content: "You are a helpful release notes assistant."},
-                    {role: "user", content: $prompt}
-                  ]
-                }')")
-
-              if echo "$RESPONSE" | jq -e '.error' >/dev/null 2>&1; then
-                NOTES="Major release for $component. See PR #$PR_NUMBER for details."
-              else
-                NOTES=$(echo "$RESPONSE" | jq -r '.choices[0].message.content')
-              fi
+              NOTES=$(echo "$RESPONSE" | jq -r '.choices[0].message.content')
             fi
 
-            if [[ -z "${NOTES:-}" || "$NOTES" == "null" ]]; then
-              NOTES="Major release for $component. See PR #$PR_NUMBER for details."
-            fi
-            NOTES="**Global ver:** $GLOBAL_TAG\n\n${NOTES}"
+            NOTES="${NOTES}"$'\n\n'"Global tag: ${GLOBAL_TAG}"
 
+            echo "Creating GitHub Release for $tag..."
             gh release create "$tag" \
               --title "$tag" \
               --notes "$NOTES" \
               --repo "$REPO"
           }
-
+          
           create_release "$FRONT_TAG" "frontend"
           create_release "$BACK_TAG" "backend"
           create_release "$FUNCS_TAG" "functions"
