--- a/.github/workflows/approval_handler.yml
+++ b/.github/workflows/approval_handler.yml
@@ -6,7 +6,7 @@ on:
 
 permissions:
   contents: read
-  pull-requests: read
+  pull-requests: write
   issues: write
   actions: write
 
@@ -22,7 +22,7 @@ jobs:
       - name: Process /approve
         uses: actions/github-script@v7
         with:
-          github-token: ${{ secrets.WORKFLOW_PAT }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
             const { owner, repo } = context.repo;
             const number = context.payload.issue.number;
