--- a/.github/workflows/label_enforcement.yml
+++ b/.github/workflows/label_enforcement.yml
@@ -3,15 +3,7 @@ name: Unified Label Process
 on:
   pull_request:
     types:
-      [
-        opened,
-        synchronize,
-        reopened,
-        edited,
-        ready_for_review,
-        labeled,
-        unlabeled,
-      ]
+      [opened, synchronize, reopened, edited, ready_for_review, labeled, unlabeled]
   workflow_dispatch:
     inputs:
       pr_number:
@@ -22,9 +14,6 @@ permissions:
   contents: read
   pull-requests: write
   issues: write
-
-env:
-  APPROVAL_USERS: "AlperPeker, alper-peker"
 
 jobs:
   ai_label_suggestion:
@@ -114,9 +103,7 @@ jobs:
           script: |
             const rawLabels = "${{ steps.openai_analysis.outputs.suggestion }}";
             if (!rawLabels) return;
-
             const labelsToAdd = rawLabels.split(',').map(l => l.trim()).filter(l => l.length > 0);
-
             if (labelsToAdd.length > 0) {
               await github.rest.issues.addLabels({
                 issue_number: context.issue.number,
@@ -128,67 +115,27 @@ jobs:
 
   label-check:
     runs-on: ubuntu-latest
-    needs: ai_label_suggestion
     if: always()
     steps:
-      - name: Require approvals and SemVer labels
+      - name: Verify Mandatory Labels
         uses: actions/github-script@v7
         with:
           script: |
             const { owner, repo } = context.repo;
+            const number = context.eventName === "pull_request" ? context.payload.pull_request.number : Number(core.getInput('pr_number'));
+            if (!number) { core.setFailed("PR number not found."); return; }
 
-            const number =
-              context.eventName === "pull_request"
-                ? context.payload.pull_request.number
-                : context.eventName === "workflow_dispatch"
-                  ? Number(core.getInput('pr_number'))
-                  : null;
+            const labels = (await github.rest.issues.listLabelsOnIssue({ owner, repo, issue_number: number })).data.map(l => l.name);
 
-            if (!number) {
-              core.setFailed("PR number not found.");
-              return;
+            const semver = new Set(["breaking-change", "feature", "fix", "security", "perf", "refactor", "docs", "test", "build", "ci", "deps", "revert"]);
+            if (!labels.some(l => semver.has(l))) {
+              core.setFailed("❌ Missing SemVer label! Please add one of: feature, fix, breaking-change, etc.");
+            } else {
+              core.info("✅ SemVer label check passed.");
             }
 
-            async function getLabels() {
-              const res = await github.rest.issues.listLabelsOnIssue({ owner, repo, issue_number: number });
-              return res.data.map(l => l.name);
-            }
-
-            const approvers = process.env.APPROVAL_USERS.split(',').map(s => s.trim());
-            let labels = await getLabels();
-            
             if (!labels.includes("approved")) {
-              const comments = await github.rest.issues.listComments({
-                 owner, repo, issue_number: number, per_page: 100
-              });
-
-              const pending = new Set(approvers);
-              
-              comments.data.forEach(c => {
-                if ((c.body || "").trim().startsWith("/approve") && approvers.includes(c.user.login)) {
-                  pending.delete(c.user.login);
-                }
-              });
-              
-              if (pending.size === 0) {
-                 await github.rest.issues.addLabels({
-                   owner, repo, issue_number: number, labels: ["approved"]
-                 });
-                 labels.push("approved");
-              } else {
-                 core.setFailed(`Missing approvals from: ${[...pending].join(', ')}`);
-                 return; 
-              }
-            }
-
-            const semver = new Set([
-              "breaking-change", "feature", "fix", "security", "perf",
-              "refactor", "docs", "test", "build", "ci", "deps", "revert"
-            ]);
-            
-            const found = labels.filter(l => semver.has(l));
-
-            if (found.length < 1) {
-              core.setFailed("Missing SemVer label (feature, fix, breaking-change, etc.)");
-              return;
+              core.setFailed("❌ Missing 'approved' label! Use '/approve' command to verify this PR.");
+            } else {
+              core.info("✅ Approval check passed.");
             }
